# moss-hermes

./: .gitignore  LICENSE  README.md  pyproject.toml
moss_hermes/: __init__.py  kill_switch.py  signing.py  uninstall.py  wrapper.py
tests/: __init__.py  test_signing.py  test_uninstall.py
